[metadata]
license      = Apache License 2.0
license_file = LICENSE
author       = HAP-python Authors
maintainer   = Ivan Kalchev
platforms  = any
description = HomeKit Accessory Protocol implementation in python3
keywords = homekit, home, automation, hap-python
classifier = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Home Automation
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = pyhap
include_package_data = true
install_requires =
    curve25519-donna
    ed25519
    pycryptodome
    tlslite-ng
    zeroconf

[options.extras_require]
QRCode =
    base36
    pyqrcode

[tool:pytest]
testpaths = tests

[pycodestyle]
max-line-length = 90
